# IIOT2_StacjaPogodowaOnline

./: .gitignore  IIOT2_StacjaPogodowaOnline.ino
Desktop_App/: CMakeLists.txt  Desktop_App.kdev4  README
Desktop_App/.cache/clangd/index/: connection_manager.cpp.AA7F1B7DA529FD3C.idx  connection_manager.h.74D640A77E1A1163.idx  desktop_app.cpp.A535B4484D2DF87A.idx  desktop_app.h.3002A5D09D573F7D.idx  main.cpp.543718F8F8CE04EB.idx  mqtt_controller.cpp.4A4535A88DD3EE39.idx  mqtt_controller.h.60BE40DC96F6D91E.idx  publisher.cpp.0DBA40D96419CE29.idx  publisher.h.08EC9F0779E3B112.idx  subscriber.cpp.864F78942C7B72E0.idx  subscriber.h.2C07187324885354.idx
Desktop_App/.kdev4/: Desktop_App.kdev4
Desktop_App/src/: .connection_manager.cpp.kate-swp  .subscriber.cpp.kate-swp  connection_manager.cpp  connection_manager.h  desktop_app.cpp  desktop_app.h  desktop_app.ui  main.cpp  mqtt_controller.cpp  mqtt_controller.h  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
